style.css
/* ... */
* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

.navbar {
    width: 86%;
    margin: 0 auto;
    display: flex;
    align-items: center;
    gap: 4%;
    border-bottom: 1px solid black;
    position: relative;
}

.navbar__nav-links {
    display: flex;
    gap: clamp(1rem, 2vw, 3rem);
    list-style-type: none;
    height: 100%;
}

.navbar__nav-links a {
    text-decoration: none;
    color: black;
    display: block;
    padding: 2rem 0;
    font-weight: lighter;
    border-bottom: 3px solid transparent;
}

.navbar__nav-links a:hover {
    border-color: var(--orange);
}

#navbar__cart-toggle {
    display: none;
}

#navbar__cart-toggle:checked~.cart {
    scale: 1;
    transition: scale 200ms ease-in-out;
}

#navbar__cart-toggle+label {
    margin-left: auto;
    width: 2rem;
    height: 2rem;
    background: url(./images/icon-cart.svg);
    background-repeat: no-repeat;
    background-position: center;
    position: relative;
}

.cart-count {
    background-color: var(--orange);
    padding: 1.5px 7px;
    border-radius: 15px;
    font-size: 0.6rem;
    position: absolute;
    right: 0;
    top: 0;
    color: white;
    font-weight: bolder;
    line-height: 1;
    display: none;
}

.navbar__cart-toggle-img {
    width: 2rem;
    height: 2rem;
    position: absolute;
    top: 50%;
    right: 6.5%;
    transform: translateY(-50%);
    background: url(./images/icon-cart.svg);
    background-repeat: no-repeat;
    background-position: center;
}

.navbar__profile-btn {
    background-color: transparent;
    border: none;
    width: clamp(1.5rem, 3.3vw, 3rem);
    height: clamp(1.5rem, 3.3vw, 3rem);
    height: width;
    border-radius: 50%;
    background: url(./images/image-avatar.png);
    background-repeat: no-repeat;
    background-position: center;
    background-size: cover;
    margin-block: 1rem;
}

.navbar__profile-btn:hover {
    outline: 2px solid var(--orange);
}

#nav-toggle {
    display: none;
}

.cart {
    position: absolute;
    right: 0;
    top: clamp(4rem, 6.6vw, 6rem);
    background-color: white;
    border-radius: 10px;
    box-shadow: 0 0.4rem 20px 0 var(--grayish-blue);
    min-width: 280px;
    z-index: 10;
    scale: 0;
}

.cart>span {
    font-weight: 800;
    color: var(--black);
    display: block;
    padding: clamp(1rem, 1.6vw, 1.5rem);
    border-bottom: 1px solid var(--grayish-blue);
}

.cart-basket {
    padding: clamp(1rem, 1.6vw, 1.5rem);
}

.empty-state {
    display: flex;
    align-items: center;
    justify-content: center;
    font-weight: 700;
    color: var(--dark-grayish-blue);
    min-height: 8rem;
}


.cart-item {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.cart-item>.thumbnail {
    width: 3rem;
    height: 100%;
    object-fit: contain;
    border-radius: 4px;
}

.cart-item__info>p {
    font-weight: bold;
    color: var(--grayish-blue);
}

.cart-item__info>span {
    color: var(--grayish-blue);
}

.cart-item__info>span>strong {
    color: var(--very-dark-blue);
}

.cart-item__detete-btn,
.cart>button {
    border: none;
    background-color: transparent;
}

.cart>button {
    width: calc(100% - clamp(2rem, 3.3vw, 3rem));
    padding: 1rem;
    background-color: var(--orange);
    font-weight: bolder;
    border-radius: 8px;
    margin: 0 clamp(1rem, 1.6vw, 1.5rem) clamp(1rem, 1.6vw, 1.5rem) clamp(1rem, 1.6vw, 1.5rem);
    font-size: 0.9rem;
    display: none;
}

main {
    padding: 2rem 6%;
    display: flex;
    justify-content: center;
    min-height: 90vh;
}

.product-item {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-evenly;
    margin: auto 0;
    width: 100%;
}

.product-item__images {
    width: 45%;
    max-width: 30rem;
    min-width: 300px;
    display: flex;
    flex-flow: row wrap;
    gap: 2rem;
    justify-content: space-between;
    flex-grow: 1;
}

.product-item__images__thumbnail {
    display: none;
}

.product-item__images__thumbnail+label {
    max-width: 7rem;
    height: 6rem;
    border-radius: 10px;
    order: 5;
    background-repeat: no-repeat;
    background-position: center;
    background-size: cover;
    flex-grow: 1;
}

.product-item__images__thumbnail:nth-child(1):checked~.product-item__images__preview {
    background: url(./images/image-product-1-thumbnail.jpg);
    background-size: cover;
}

.product-item__images__thumbnail:nth-child(3):checked~.product-item__images__preview {
    background: url(./images/image-product-2-thumbnail.jpg);
    background-size: cover;
}

.product-item__images__thumbnail:nth-child(5):checked~.product-item__images__preview {
    background: url(./images/image-product-3-thumbnail.jpg);
    background-size: cover;
}

.product-item__images__thumbnail:nth-child(7):checked~.product-item__images__preview {
    background: url(./images/image-product-4-thumbnail.jpg);
    background-size: cover;
}

.product-item__images__thumbnail+label:nth-of-type(1) {
    background: url(./images/image-product-1-thumbnail.jpg);
    background-size: cover;
}

.product-item__images__thumbnail+label:nth-of-type(2) {
    background: url(./images/image-product-2-thumbnail.jpg);
    background-size: cover;
}

.product-item__images__thumbnail+label:nth-of-type(3) {
    background: url(./images/image-product-3-thumbnail.jpg);
    background-size: cover;
}

.product-item__images__thumbnail+label:nth-of-type(4) {
    background: url(./images/image-product-4-thumbnail.jpg);
    background-size: cover;
}

.product-item__images__preview {
    order: 1;
    width: 100%;
    height: clamp(20rem, 35vw, 27rem);
    max-height: 70vh;
    background: url(./images/image-product-1.jpg);
    background-repeat: no-repeat;
    background-position: center;
    background-size: cover;
    border: none;
    transition: background 500ms ease-in-out;
    aspect-ratio: 2/3;
    border-radius: 15px;
}
/* ... */

